fixed gap on hero

--- a/styles/base.css
+++ b/styles/base.css
@@ -172,6 +172,7 @@ footer {
   padding-left: 0;
   display: flex;
   flex-direction: column;
+  margin-bottom: 0px;
 }
 
 .navigation li {
